# Abschlussprojekt-Lena-Ellena

./: README.md  ekgdaten.py  main.py  person.py  pyproject.toml  read_data.py  requirements.txt
data/: person_db.json
